--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -7,7 +7,13 @@ daemon off;
 worker_rlimit_nofile <%= node['nginx']['worker_rlimit_nofile'] %>;
 <% end -%>
 
+<% if node.run_state['nginx_syslog'] -%>
+syslog local6 '##nginx##';
+error_log  syslog:error;
+<% else -%>
 error_log  <%= node['nginx']['log_dir'] %>/error.log;
+<% end -%>
+
 pid        <%= node['nginx']['pid'] %>;
 
 events {
